Reduce usages of third-party libraries (#137)
Co-authored-by: Jesse Glick <jglick@cloudbees.com>